slider projects errata

--- a/ministeriopp.html
+++ b/ministeriopp.html
@@ -100,12 +100,11 @@
             <p>OUTROS <br> PROJETOS</p>
         </div>
         <swiper-container class="mySwiper slider2-wrapper" init="false" auto-height="true" slides-per-view="auto" pagination="true"
-        pagination-clickable="true" space-between="0" navigation="true" loop="true" 
-        autoplay="true"
+        pagination-clickable="true" space-between="0" navigation="true" loop="true" autoplay="true"       
         pagination-dynamic-bullets="true">
           <swiper-slide>
-            <div class="swipercontent textslide" id="textslide10">
-                <h1 style="font-size: 22px;padding-bottom: 14px;">Slopes Ski & Snow<Br> Board Club</h1>
+            <div class="swipercontent textslide" id="textslide21">
+                <h1>Slopes Ski & Snow Board Club</h1>
                 <h2>2025</h2>
                 <a target="_blank" href="https://palomasiqueiraarquiteta.com/slopeskisnowboardclub"><img draggable="false" src="./assets/projeto-sssbc.png" alt="link projeto casa JC66" draggable="false"></a>
                 <h3>FOTOS: PIPO GIALLUISI</h3>
@@ -119,6 +118,35 @@
                 <a target="_blank" href="casads.html"><img draggable="false" src="./assets/projeto-ds.png" alt="link projeto casa DS" draggable="false"></a>
                 <h3>FOTOS: PIPO GIALLUISI</h3>
                 <h4>INTERIORES + CONSULTORIA</h4>
+            </div>
+          </swiper-slide>
+          <swiper-slide>
+            <div class="swipercontent textslide" id="textslide17">
+                <h1>POUSADA SABINA</h1>
+                <h2>2022</h2>
+                <a target="_blank" href="pousadasabina.html"><img draggable="false" src="./assets/projeto-140.webp" alt="link projeto POUSADA SABINA"></a>
+                <div class="footerslider">
+                <h3>FOTOS: @minafotovideo @camislemonde</h3>
+                <h4>INTERIORES</h4></div>
+            </div>
+          </swiper-slide>
+          <swiper-slide>
+            <div class="swipercontent textslide" id="textslide18">
+                <h1>POUSADA AQUALTUNE</h1>
+                <h2>2021</h2>
+                <a target="_blank" href="pousadaaqualtune.html"><img draggable="false" src="./assets/projeto-150.webp" alt="link projeto POUSADA AQUALTUNE"></a>
+                <div class="footerslider">
+                <h3>FOTOS: @minafotovideo/ @camislemonde/Mariana Sena</h3>
+                <h4>URBANISMO</h4></div>
+            </div>
+          </swiper-slide>
+          <swiper-slide>
+            <div class="swipercontent textslide" id="textslide19">
+                <h1>POUSADA AQUALTUNE AMPLIAÇÃO</h1>
+                <h2>2024</h2>
+                <a target="_blank" href="pousadaaqualtuneampliacao.html"><img draggable="false" src="./assets/projeto-170.webp" alt="link projeto POUSADA AQUALTUNE AMPLIAÇÃO"></a>
+                <h3>FOTOS: Mariana Sena</h3>
+                <h4>URBANISMO</h4>
             </div>
           </swiper-slide>
           <swiper-slide>
@@ -265,36 +293,7 @@
                 <h4>URBANISMO</h4>
             </div>
           </swiper-slide>
-          <swiper-slide>
-            <div class="swipercontent textslide" id="textslide17">
-                <h1>POUSADA SABINA</h1>
-                <h2>2022</h2>
-                <a target="_blank" href="pousadasabina.html"><img draggable="false" src="./assets/projeto-140.webp" alt="link projeto POUSADA SABINA"></a>
-                <div class="footerslider">
-                <h3>FOTOS: @minafotovideo @camislemonde</h3>
-                <h4>INTERIORES</h4></div>
-            </div>
-          </swiper-slide>
-          <swiper-slide>
-            <div class="swipercontent textslide" id="textslide18">
-                <h1>POUSADA AQUALTUNE</h1>
-                <h2>2021</h2>
-                <a target="_blank" href="pousadaaqualtune.html"><img draggable="false" src="./assets/projeto-150.webp" alt="link projeto POUSADA AQUALTUNE"></a>
-                <div class="footerslider">
-                <h3>FOTOS: @minafotovideo/ @camislemonde/Mariana Sena</h3>
-                <h4>URBANISMO</h4></div>
-            </div>
-          </swiper-slide>
-          <swiper-slide>
-            <div class="swipercontent textslide" id="textslide19">
-                <h1>POUSADA AQUALTUNE AMPLIAÇÃO</h1>
-                <h2>2024</h2>
-                <a target="_blank" href="pousadaaqualtuneampliacao.html"><img draggable="false" src="./assets/projeto-170.webp" alt="link projeto POUSADA AQUALTUNE AMPLIAÇÃO"></a>
-                <h3>FOTOS: Mariana Sena</h3>
-                <h4>URBANISMO</h4>
-            </div>
-          </swiper-slide>
-          </swiper-container>    
+          </swiper-container>   
     </main>
 <footer>
     <div class="grid-footer">
