projetos page css

--- a/projetos.html
+++ b/projetos.html
@@ -50,8 +50,8 @@
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4 style="width: 187px;">INTERIORES + CONSULTORIA </h4>
                 </div>
-                <div class="card2" style="margin-top: -25px;">
-                    <h1 style="text-transform: uppercase;font-size: 25px;">Slopes Ski & Snow Board Club</h1>
+                <div class="card2" style="margin-top: -21px;">
+                    <h1 style="text-transform: uppercase;">Slopes Ski & Snow Board Club</h1>
                     <h2>2025</h2>
                     <a target="_blank" href="slopeskisnowboardclub.html"><img src="assets/projeto-sssbc.png" alt="link projeto Slopes Ski & Snow Board Club"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="container1">
-                <div class="card2" style="margin-top: -25px;">
+                <div class="card2" style="margin-top: -21px;">
                     <h1>POUSADA AQUALTUNE AMPLIAÇÃO</h1>
                     <h2>2024</h2>
                     <a target="_blank" href="pousadaaqualtuneampliacao.html"><img src="assets/projeto-170.webp" alt="link projeto POUSADA aqualtune AMPLIAÇÃO"></a>
