--- a/casads.html
+++ b/casads.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="pousadasabinaeaqua.css">
+    <link rel="stylesheet" href="casabp.css">
     <link rel="stylesheet" href="casads.css">
     <link rel="stylesheet" href="swiper-bundle.min.css">
     <link rel="stylesheet" href="css/slider.css">
@@ -60,17 +60,45 @@
         <div class="frame1">
             <img src="./assets/casads/250904A-015.webp" alt="imagem capa Casa DS">
             <img src="./assets/casads/250904A-007.webp" alt="imagem Casa DS">
+        </div>
+        <div class="container-slider">
+            <div class="slider-wrapper">
+                <a class="prev" id="arrowSlider1" onclick="plusSlides(-1)">&#10094;</a>
+                <div class="slider">
+                    <div class="imgslide" id="imgslide1"><img src="./assets/casads/antes/Escritorio.webp" alt=""></div>
+                    <div class="imgslide" id="imgslide1"><img src="./assets/casads/antes/Sala Jantar.webp" alt=""></div>
+                    <div class="imgslide" id="imgslide1"><img src="./assets/casads/antes/Estar Lareira.webp" alt=""></div>
+                </div>
+                <div class="slider1-nav">
+                    <a class="dot2" onclick="currentSlide(1)" ></a>
+                    <a class="dot2" onclick="currentSlide(2)" ></a>
+                    <a class="dot2" onclick="currentSlide(3)" ></a>
+                </div>
+            <a class="next" id="arrowSlider1" onclick="plusSlides(1)">&#10095;</a> 
+            </div>
+        </div>
+        <div class="frame1">
             <img src="./assets/casads/250904A-006.webp" alt="imagem Casa DS">
             <img src="./assets/casads/250904A-001.webp" alt="imagem Casa DS">
             <img src="./assets/casads/250904A-005.webp" alt="imagem Casa DS">
         </div>
-        <div class="frame3 frame3ampli" style="background-color:white;">
+        <div class="frame3ampli" style="background-color:white;">
             <img src="./assets/casads/250904A-021.webp" alt="imagem Casa DS">
             <img src="./assets/casads/250904A-010.webp" alt="imagem Casa DS">
         </div>
         <div class="frame1">
             <img src="./assets/casads/250904A-022.webp" alt="imagem Casa DS">
             <img src="./assets/casads/250904A-025.webp" alt="imagem Casa DS">
+        </div>
+        <div class="container3-slider">
+            <div class="slider3-wrapper">
+                <a class="prev3" id="arrowSlider3" onclick="prev(this)">&#10094;</a>
+                <div class="slider3 slider">
+                    <div class="item iteml" id="imgslide1"><img src="./assets/casads/antes/Lavabo.webp" alt=""></div>
+                    <div class="item" id="imgslide1"><img src="./assets/casads/antes/Gourmet.webp" alt=""></div>
+                </div>
+            <a class="next3" id="arrowSlider3" onclick="next(this)">&#10095;</a> 
+            </div>
         </div>
         <div class="outros">
             <p>OUTROS <br> PROJETOS</p>
