--- a/slopeskisnowboardclub.html
+++ b/slopeskisnowboardclub.html
@@ -60,10 +60,16 @@
         <div class="frame1">
             <img src="./assets/slopesski/250827A-001B.webp" alt="imagem capa Slopes Ski & Snow Board Club">
             <img src="./assets/slopesski/250827A-002B.webp" alt="imagem Slopes Ski & Snow Board Club">
-            <img src="./assets/slopesski/250827A-004B.webp" alt="imagem Slopes Ski & Snow Board Club">
+        </div>
+        <div class="frame3 frame3ampli-2" style="background-color: #fff;">
             <img src="./assets/slopesski/250827A-005B.webp" alt="imagem Slopes Ski & Snow Board Club">
             <img src="./assets/slopesski/250827A-006B.webp" alt="imagem Slopes Ski & Snow Board Club">
+        </div>
+        <div class="frame3 frame3ampli" style="background-color:white;">
+            <img src="./assets/slopesski/250827A-004B.webp" alt="imagem Slopes Ski & Snow Board Club">
             <img src="./assets/slopesski/250827A-007B.webp" alt="imagem Slopes Ski & Snow Board Club">
+        </div>
+        <div class="frame1">
             <img src="./assets/slopesski/250827A-008B.webp" alt="imagem Slopes Ski & Snow Board Club">
             <img src="./assets/slopesski/250827A-009B.webp" alt="imagem Slopes Ski & Snow Board Club">
         </div>
