ssssbc css mobile

--- a/slopeskisnowboardclub.html
+++ b/slopeskisnowboardclub.html
@@ -61,7 +61,7 @@
             <img src="./assets/slopesski/250827A-001B.webp" alt="imagem capa Slopes Ski & Snow Board Club">
             <img src="./assets/slopesski/250827A-002B.webp" alt="imagem Slopes Ski & Snow Board Club">
         </div>
-        <div class="frame3 frame3ampli-2" style="background-color: #fff;">
+        <div class="frame3 frame3ampli-2 frame2sssbc" style="background-color: #fff;">
             <img src="./assets/slopesski/250827A-005B.webp" alt="imagem Slopes Ski & Snow Board Club">
             <img src="./assets/slopesski/250827A-006B.webp" alt="imagem Slopes Ski & Snow Board Club">
         </div>
