link to page mod

--- a/casads.html
+++ b/casads.html
@@ -119,7 +119,7 @@
             <div class="swipercontent textslide" id="textslide20">
                 <h1>CASA DS</h1>
                 <h2>2024</h2>
-                <a target="_blank" href="casads.html"><img draggable="false" src="./assets/projeto-ds.png" alt="link projeto casa DS" draggable="false"></a>
+                <a target="_blank" href="https://palomasiqueiraarquiteta.com/casads"><img draggable="false" src="./assets/projeto-ds.png" alt="link projeto casa DS" draggable="false"></a>
                 <h3>FOTOS: PIPO GIALLUISI</h3>
                 <h4>INTERIORES + CONSULTORIA</h4>
             </div>
@@ -128,7 +128,7 @@
             <div class="swipercontent textslide" id="textslide17">
                 <h1>POUSADA SABINA</h1>
                 <h2>2022</h2>
-                <a target="_blank" href="pousadasabina.html"><img draggable="false" src="./assets/projeto-140.webp" alt="link projeto POUSADA SABINA"></a>
+                <a target="_blank" href="https://palomasiqueiraarquiteta.com/pousadasabina"><img draggable="false" src="./assets/projeto-140.webp" alt="link projeto POUSADA SABINA"></a>
                 <div class="footerslider">
                 <h3>FOTOS: @minafotovideo @camislemonde</h3>
                 <h4>INTERIORES</h4></div>
@@ -138,7 +138,7 @@
             <div class="swipercontent textslide" id="textslide18">
                 <h1>POUSADA AQUALTUNE</h1>
                 <h2>2021</h2>
-                <a target="_blank" href="pousadaaqualtune.html"><img draggable="false" src="./assets/projeto-150.webp" alt="link projeto POUSADA AQUALTUNE"></a>
+                <a target="_blank" href="https://palomasiqueiraarquiteta.com/pousadaaqualtune"><img draggable="false" src="./assets/projeto-150.webp" alt="link projeto POUSADA AQUALTUNE"></a>
                 <div class="footerslider">
                 <h3>FOTOS: @minafotovideo/ @camislemonde/Mariana Sena</h3>
                 <h4>URBANISMO</h4></div>
@@ -148,7 +148,7 @@
             <div class="swipercontent textslide" id="textslide19">
                 <h1>POUSADA AQUALTUNE AMPLIAÇÃO</h1>
                 <h2>2024</h2>
-                <a target="_blank" href="pousadaaqualtuneampliacao.html"><img draggable="false" src="./assets/projeto-170.webp" alt="link projeto POUSADA AQUALTUNE AMPLIAÇÃO"></a>
+                <a target="_blank" href="https://palomasiqueiraarquiteta.com/pousadaaqualtuneampliacao"><img draggable="false" src="./assets/projeto-170.webp" alt="link projeto POUSADA AQUALTUNE AMPLIAÇÃO"></a>
                 <h3>FOTOS: Mariana Sena</h3>
                 <h4>URBANISMO</h4>
             </div>
@@ -157,7 +157,7 @@
             <div class="swipercontent textslide" id="textslide1">
                 <h1>CASA JC66</h1>
                 <h2>2012</h2>
-                <a target="_blank" href="casajc66.html"><img draggable="false" src="https://i.ibb.co/TRTm6Rr/casa-jc66.png" alt="link projeto casa JC66" draggable="false"></a>
+                <a target="_blank" href="https://palomasiqueiraarquiteta.com/casajc66"><img draggable="false" src="https://i.ibb.co/TRTm6Rr/casa-jc66.png" alt="link projeto casa JC66" draggable="false"></a>
                 <h3>FOTOS: ANA MELLO</h3>
                 <h4>EDIFICAÇÃO NOVA</h4>
             </div>
@@ -166,7 +166,7 @@
             <div class="swipercontent textslide" id="textslide2">
             <h1>CASA OXALÁ I</h1>
             <h2>2016</h2>
-            <a target="_blank" href="vilaoxalai.html"><img draggable="false" src="https://i.ibb.co/NY6XBGH/vila-oxala-I.png" alt="link projeto Casa Oxalá 1" draggable="false"></a>
+            <a target="_blank" href="https://palomasiqueiraarquiteta.com/vilaoxalai"><img draggable="false" src="https://i.ibb.co/NY6XBGH/vila-oxala-I.png" alt="link projeto Casa Oxalá 1" draggable="false"></a>
             <h3>FOTOS: OKA FOTOGRAFIA</h3>
             <h4>EDIFICAÇÃO NOVA</h4>
             </div>
@@ -175,7 +175,7 @@
             <div class="swipercontent textslide" id="textslide3">
                 <h1>CASA OXALÁ II</h1>
                 <h2>2017</h2>
-                <a target="_blank" href="vilaoxalaii.html"><img draggable="false" src="https://i.ibb.co/vVT1WDC/vila-oxala-II.png" alt="link projeto casa Oxalá 2" draggable="false"></a>                    
+                <a target="_blank" href="https://palomasiqueiraarquiteta.com/vilaoxalaii"><img draggable="false" src="https://i.ibb.co/vVT1WDC/vila-oxala-II.png" alt="link projeto casa Oxalá 2" draggable="false"></a>                    
                 <h3>FOTOS: OKA FOTOGRAFIA</h3>
                 <h4>EDIFICAÇÃO NOVA</h4>
             </div>
@@ -184,7 +184,7 @@
             <div class="swipercontent textslide" id="textslide4">
                 <h1>CASA MILANO</h1>
                 <h2>2017</h2>
-                <a target="_blank" href="casamilano.html"><img draggable="false" src="https://i.ibb.co/8680pSF/casa-milano.png" alt="link projeto Casa Milano" draggable="false"></a>
+                <a target="_blank" href="https://palomasiqueiraarquiteta.com/casamilano"><img draggable="false" src="https://i.ibb.co/8680pSF/casa-milano.png" alt="link projeto Casa Milano" draggable="false"></a>
                 <h3>FOTOS: OKA FOTOGRAFIA</h3>
                 <h4>EDIFICAÇÃO NOVA</h4>
             </div>
@@ -193,7 +193,7 @@
             <div class="swipercontent textslide" id="textslide5">
                 <h1>ODOYÁ LOUNGE</h1>
                 <h2>2017</h2>
-                <a target="_blank" href="odoyalounge.html"><img draggable="false" src="https://i.ibb.co/HHVpgQK/odoya-lounge-bar.png" alt="link projeto odoya lounge" draggable="false"></a>
+                <a target="_blank" href="https://palomasiqueiraarquiteta.com/odoyalounge"><img draggable="false" src="https://i.ibb.co/HHVpgQK/odoya-lounge-bar.png" alt="link projeto odoya lounge" draggable="false"></a>
                 <h3>FOTOS: OKA FOTOGRAFIA</h3>
                 <h4>EDIFICAÇÃO NOVA</h4>
             </div>
@@ -202,7 +202,7 @@
             <div class="swipercontent textslide" id="textslide6">
                 <h1>CASA BP</h1>
                 <h2>2004</h2>
-                <a target="_blank" href="casabp.html"><img draggable="false" src="https://i.ibb.co/b2PtcCx/casa-bp.png" alt="link projeto casa bp" draggable="false"></a>
+                <a target="_blank" href="https://palomasiqueiraarquiteta.com/casabp"><img draggable="false" src="https://i.ibb.co/b2PtcCx/casa-bp.png" alt="link projeto casa bp" draggable="false"></a>
                 <h3>FOTOS: CAROLINA RIBEIRO</h3>
                 <h4>REFORMA</h4>
             </div>
@@ -211,7 +211,7 @@
             <div class="swipercontent textslide" id="textslide7">
                 <h1>CASA LB</h1>
                 <h2>2006</h2>
-                <a target="_blank" href="casalb.html"><img draggable="false" src="https://i.ibb.co/sFZrgqL/casa-lb.png" alt="link projeto casa lb" draggable="false"></a>
+                <a target="_blank" href="https://palomasiqueiraarquiteta.com/casalb"><img draggable="false" src="https://i.ibb.co/sFZrgqL/casa-lb.png" alt="link projeto casa lb" draggable="false"></a>
                 <h3>FOTOS: PIPO GIALLUISI</h3>
                 <h4>REFORMA</h4>
             </div>
@@ -220,7 +220,7 @@
             <div class="swipercontent textslide" id="textslide8">
                 <h1>ATELIÊ LV</h1>
                 <h2>2006</h2>
-                <a target="_blank" href="atelielv.html"><img draggable="false" src="https://i.ibb.co/4s9Ynrp/atelie-lv.png" alt="link projeto casa lv" draggable="false"></a>
+                <a target="_blank" href="https://palomasiqueiraarquiteta.com/atelielv"><img draggable="false" src="https://i.ibb.co/4s9Ynrp/atelie-lv.png" alt="link projeto casa lv" draggable="false"></a>
                 <h3>FOTOS: PIPO GIALLUISI</h3>
                 <h4>INTERIORES</h4>
             </div>
@@ -229,7 +229,7 @@
             <div class="swipercontent textslide" id="textslide9">
                 <h1>BOM, CAFÉ</h1>
                 <h2>2006</h2>
-                <a target="_blank" href="bomcafe.html"><img draggable="false" src="https://i.ibb.co/fCq4NDd/bom-cafe.png" alt="link projeto bom, café" draggable="false"></a>
+                <a target="_blank" href="https://palomasiqueiraarquiteta.com/bomcafe"><img draggable="false" src="https://i.ibb.co/fCq4NDd/bom-cafe.png" alt="link projeto bom, café" draggable="false"></a>
                 <h3>FOTOS: PIPO GIALLUISI</h3>
                 <h4>REFORMA</h4>
             </div>
@@ -238,7 +238,7 @@
             <div class="swipercontent textslide" id="textslide10">
                 <h1>THE PILATES STUDIO BRAZIL</h1>
                 <h2>2006</h2>
-                <a target="_blank" href="pilatesbrazil.html"><img draggable="false" src="https://i.ibb.co/QDk6rFN/the-pilates-studio-sp.png" alt="link projeto the pilates studio brazil" draggable="false"></a>
+                <a target="_blank" href="https://palomasiqueiraarquiteta.com/pilatesbrazil"><img draggable="false" src="https://i.ibb.co/QDk6rFN/the-pilates-studio-sp.png" alt="link projeto the pilates studio brazil" draggable="false"></a>
                 <h3>FOTOS: PIPO GIALLUISI</h3>
                 <h4>REFORMA</h4>
             </div>
@@ -247,7 +247,7 @@
             <div class="swipercontent textslide" id="textslide11">
                 <h1>ANNEXE</h1>
                 <h2>2007</h2>
-                <a href="#home"><img draggable="false" src="./assets/projeto-110.webp" alt="link projeto annexe"></a>
+                <a href="https://palomasiqueiraarquiteta.com/annexe"><img draggable="false" src="./assets/projeto-110.webp" alt="link projeto annexe"></a>
                 <h3>FOTOS: PIPO GIALLUISI</h3>
                 <h4>REFORMA</h4>
             </div>
@@ -256,7 +256,7 @@
             <div class="swipercontent textslide" id="textslide12">
                 <h1>ASACCIONES</h1>
                 <h2>2011</h2>
-                <a target="_blank" href="asacciones.html"><img draggable="false" src="https://i.ibb.co/r0q2mbM/la-bachillera.png" alt="link projeto asacciones"></a>
+                <a target="_blank" href="https://palomasiqueiraarquiteta.com/asacciones"><img draggable="false" src="https://i.ibb.co/r0q2mbM/la-bachillera.png" alt="link projeto asacciones"></a>
                 <h3>COLOCAÇÃO: 1ºLUGAR</h3>
                 <h4>CONCURSO</h4>
             </div>
@@ -265,7 +265,7 @@
             <div class="swipercontent textslide" id="textslide13">
                 <h1>RENOVA SP</h1>
                 <h2>2007</h2>
-                <a target="_blank" href="renovasp.html"><img draggable="false" src="./assets/projeto-130.webp" alt="link projeto renova sp"></a>
+                <a target="_blank" href="https://palomasiqueiraarquiteta.com/renovasp"><img draggable="false" src="./assets/projeto-130.webp" alt="link projeto renova sp"></a>
                 <h3>COLOCAÇÃO: 1ºLUGAR</h3>
                 <h4>CONCURSO</h4>
             </div>
@@ -274,7 +274,7 @@
             <div class="swipercontent textslide" id="textslide14">
                 <h1>MPPB</h1>
                 <h2>2013</h2>
-                <a target="_blank" href="ministeriopp.html"><img draggable="false" src="./assets/projeto-140.png" alt="link projeto MPPB"></a>
+                <a target="_blank" href="https://palomasiqueiraarquiteta.com/ministeriopp"><img draggable="false" src="./assets/projeto-140.png" alt="link projeto MPPB"></a>
                 <h3>-</h3>
                 <h4>CONCURSO</h4>
             </div>
@@ -283,7 +283,7 @@
             <div class="swipercontent textslide" id="textslide15">
                 <h1>CEAGESP</h1>
                 <h2>2013</h2>
-                <a target="_blank" href="ceagesp.html"><img draggable="false" src="./assets/projeto-150.png" alt="link projeto ceagesp"></a>
+                <a target="_blank" href="https://palomasiqueiraarquiteta.com/ceagesp"><img draggable="false" src="./assets/projeto-150.png" alt="link projeto ceagesp"></a>
                 <h3>-</h3>
                 <h4>URBANISMO</h4>
             </div>
@@ -292,7 +292,7 @@
             <div class="swipercontent textslide" id="textslide16">
                 <h1>ARCO DO TIETE</h1>
                 <h2>2013</h2>
-                <a target="_blank" href="arco.html"><img draggable="false" src="./assets/projeto-160.png" alt="link projeto arco do tiete"></a>
+                <a target="_blank" href="https://palomasiqueiraarquiteta.com/arco"><img draggable="false" src="./assets/projeto-160.png" alt="link projeto arco do tiete"></a>
                 <h3>-</h3>
                 <h4>URBANISMO</h4>
             </div>
