--- a/projetos.html
+++ b/projetos.html
@@ -46,14 +46,14 @@
                 <div class="card1">
                     <h1>CASA DS</h1>
                     <h2>2024</h2>
-                    <a target="_blank" href="casads.html"><img src="assets/projeto-ds.png" alt="link projeto CASA DS"></a>
+                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/casads.html"><img src="assets/projeto-ds.png" alt="link projeto CASA DS"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4 style="width: 187px;">INTERIORES + CONSULTORIA </h4>
                 </div>
                 <div class="card2" style="margin-top: -21px;">
                     <h1 style="text-transform: uppercase;">Slopes Ski & Snow Board Club</h1>
                     <h2>2025</h2>
-                    <a target="_blank" href="slopeskisnowboardclub.html"><img src="assets/projeto-sssbc.png" alt="link projeto Slopes Ski & Snow Board Club"></a>
+                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/slopeskisnowboardclub.html"><img src="assets/projeto-sssbc.png" alt="link projeto Slopes Ski & Snow Board Club"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4 style="width: 160px;">REFORMA + INTERIORES</h4>
                 </div>
@@ -62,14 +62,14 @@
                 <div class="card2" style="margin-top: -21px;">
                     <h1>POUSADA AQUALTUNE AMPLIAÇÃO</h1>
                     <h2>2024</h2>
-                    <a target="_blank" href="pousadaaqualtuneampliacao.html"><img src="assets/projeto-170.webp" alt="link projeto POUSADA aqualtune AMPLIAÇÃO"></a>
+                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/pousadaaqualtuneampliacao.html"><img src="assets/projeto-170.webp" alt="link projeto POUSADA aqualtune AMPLIAÇÃO"></a>
                     <h3>FOTOS: MARIANA SENA</h3>
                     <h4 style="width: 190px;">ARQUITETURA + INTERIORES </h4>
                 </div>
                 <div class="card2">
                     <h1>POUSADA SABINA</h1>
                     <h2>2022</h2>
-                    <a target="_blank" href="pousadasabina.html"><img src="assets/projeto-140.webp" alt="link projeto POUSADA SABINA"></a>
+                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/pousadasabina.html"><img src="assets/projeto-140.webp" alt="link projeto POUSADA SABINA"></a>
                     <h3>FOTOS:  @minafotovideo @camislemonde</h3>
                     <h4 style="width: 90px;">INTERIORES</h4>
                 </div>
@@ -78,7 +78,7 @@
                 <div class="card3">
                     <h1>POUSADA AQUALTUNE</h1>
                     <h2>2021</h2>
-                    <a target="_blank" href="pousadaaqualtune.html"><img src="assets/projeto-150.webp" alt="link projeto POUSADA AQUALTUNE"></a>
+                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/pousadaaqualtune.html"><img src="assets/projeto-150.webp" alt="link projeto POUSADA AQUALTUNE"></a>
                     <h3>FOTOS POR: @minafotovideo / @camislemonde / Mariana Sena</h3>
                     <h4 style="width: 90px;">INTERIORES</h4>
                 </div>
@@ -87,14 +87,14 @@
                 <div class="card1">
                     <h1>CASA JC66</h1>
                     <h2>2012</h2>
-                    <a target="_blank" href="casajc66.html"><img src="assets/projeto-11.webp" alt="link projeto casa JC66"></a>
+                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/casajc66"><img src="assets/projeto-11.webp" alt="link projeto casa JC66"></a>
                     <h3>FOTOS: ANA MELLO</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div>
                 <div class="card2">
                     <h1>CASA MILANO</h1>
                     <h2>2017</h2>
-                    <a target="_blank" href="casamilano.html"><img src="assets/projeto-22.webp" alt="link projeto Casa Milano"></a>
+                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/casamilano"><img src="assets/projeto-22.webp" alt="link projeto Casa Milano"></a>
                     <h3>FOTOS: OKA FOTOGRAFIA</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div>
@@ -103,7 +103,7 @@
                 <div class="card3">
                     <h1>VILA OXALÁ I</h1>
                     <h2>2016</h2>
-                    <a target="_blank" href="vilaoxalai.html"><img src="assets/projeto-33.webp" alt="link projeto Casa Oxalá 1"></a>
+                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/vilaoxalai"><img src="assets/projeto-33.webp" alt="link projeto Casa Oxalá 1"></a>
                     <h3>FOTOS: OKA FOTOGRAFIA</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div>
@@ -112,14 +112,14 @@
                 <div class="card4">
                     <h1>VILA OXALÁ II</h1>
                     <h2>2017</h2>
-                    <a target="_blank" href="vilaoxalaii.html"><img src="assets/projeto-44.webp" alt="link projeto casa Oxalá 2"></a>                    
+                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/vilaoxalaii"><img src="assets/projeto-44.webp" alt="link projeto casa Oxalá 2"></a>                    
                     <h3>FOTOS: OKA FOTOGRAFIA</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div>
                 <div class="card5">
                     <h1>ODOYÁ LOUNGE</h1>
                     <h2>2017</h2>
-                    <a target="_blank" href="odoyalounge.html"><img src="assets/projeto-55.webp" alt="link projeto odoya lounge"></a>
+                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/odoyalounge"><img src="assets/projeto-55.webp" alt="link projeto odoya lounge"></a>
                     <h3>FOTOS: OKA FOTOGRAFIA</h3>
                     <h4>EDIFICAÇÃO NOVA</h4>
                 </div>
@@ -128,7 +128,7 @@
                 <div class="card6">
                     <h1>CASA BP</h1>
                     <h2>2004</h2>
-                    <a target="_blank" href="casabp.html"><img src="assets/projeto-66.webp" alt="link projeto casa bp"></a>
+                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/casabp"><img src="assets/projeto-66.webp" alt="link projeto casa bp"></a>
                     <h3>FOTOS: CAROLINA RIBEIRO</h3>
                     <h4>REFORMA</h4>
                 </div>
@@ -137,14 +137,14 @@
                 <div class="card7">
                     <h1>CASA LB</h1>
                     <h2>2006</h2>
-                    <a target="_blank" href="casalb.html"><img src="assets/projeto-77.webp" alt="link projeto casa lb"></a>
+                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/casalb"><img src="assets/projeto-77.webp" alt="link projeto casa lb"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>REFORMA</h4>
                 </div>
                 <div class="card8">
                     <h1>ATELIÊ LV</h1>
                     <h2>2006</h2>
-                    <a target="_blank" href="atelielv.html"><img src="assets/projeto-88.webp" alt="link projeto casa lv"></a>
+                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/atelielv"><img src="assets/projeto-88.webp" alt="link projeto casa lv"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>INTERIORES</h4>
                 </div>
@@ -153,7 +153,7 @@
                 <div class="card9">
                     <h1>BOM, CAFÉ</h1>
                     <h2>2006</h2>
-                    <a target="_blank" href="bomcafe.html"><img src="assets/projeto-99.webp" alt="link projeto bom, café"></a>
+                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/bomcafe"><img src="assets/projeto-99.webp" alt="link projeto bom, café"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>REFORMA</h4>
                 </div>
@@ -162,14 +162,14 @@
                 <div class="card10">
                     <h1>THE PILATES STUDIO BRAZIL</h1>
                     <h2>2006</h2>
-                    <a target="_blank" href="pilatesbrazil.html"><img src="assets/projeto-100.webp" alt="link projeto the pilates studio brazil"></a>
+                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/pilatesbrazil"><img src="assets/projeto-100.webp" alt="link projeto the pilates studio brazil"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>REFORMA</h4>
                 </div>
                 <div class="card11">
                     <h1>ANNEXE</h1>
                     <h2>2007</h2>
-                    <a target="_blank" href="annexe.html"><img src="./assets/projeto-110.webp" alt="link projeto annexe"></a>
+                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/annexe"><img src="./assets/projeto-110.webp" alt="link projeto annexe"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4>REFORMA</h4>
                 </div>
@@ -178,14 +178,14 @@
                 <div class="card12">
                         <h1>ASACCIONES</h1>
                         <h2>2011</h2>
-                        <a target="_blank" href="asacciones.html"><img src="assets/projeto-120.png" alt="link projeto asacciones"></a>
+                        <a target="_blank" href="https://palomasiqueiraarquiteta.com/asacciones"><img src="assets/projeto-120.png" alt="link projeto asacciones"></a>
                         <h3>COLOCAÇÃO: 1ºLUGAR</h3>
                         <h4>CONCURSO</h4>
                         </div>
                     <div class="card13">
                         <h1>RENOVA SP</h1>
                         <h2>2007</h2>
-                        <a target="_blank" href="renovasp.html"><img src="./assets/projeto-130.webp" alt="link projeto renova sp"></a>
+                        <a target="_blank" href="https://palomasiqueiraarquiteta.com/renovasp"><img src="./assets/projeto-130.webp" alt="link projeto renova sp"></a>
                         <h3>COLOCAÇÃO: 1ºLUGAR</h3>
                         <h4>CONCURSO</h4>
                     </div>
@@ -194,7 +194,7 @@
                 <div class="card14">
                     <h1>MPPB</h1>
                     <h2>2013</h2>
-                    <a target="_blank" href="ministeriopp.html"><img src="assets/projeto-140.png" alt="link projeto MINISTÉRIO PÚBLICO DA PARAÍBA"></a>
+                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/ministeriopp"><img src="assets/projeto-140.png" alt="link projeto MINISTÉRIO PÚBLICO DA PARAÍBA"></a>
                     <h4>CONCURSO</h4>
                 </div>
             </div>
@@ -202,13 +202,13 @@
                 <div class="card15">
                         <h1>CEAGESP</h1>
                         <h2>2013</h2>
-                        <a target="_blank" href="ceagesp.html"><img src="assets/projeto-150.png" alt="link projeto ceagesp"></a>
+                        <a target="_blank" href="https://palomasiqueiraarquiteta.com/ceagesp"><img src="assets/projeto-150.png" alt="link projeto ceagesp"></a>
                         <h4>URBANISMO</h4>
                         </div>
                     <div class="card16">
                         <h1>ARCO DO TIETÊ</h1>
                         <h2>2013</h2>
-                        <a target="_blank" href="arco.html"><img src="./assets/projeto-160.png" alt="link projeto arco"></a>
+                        <a target="_blank" href="https://palomasiqueiraarquiteta.com/arco"><img src="./assets/projeto-160.png" alt="link projeto arco"></a>
                         <h4>URBANISMO</h4>
                     </div>
             </div>
