--- a/projetos.html
+++ b/projetos.html
@@ -46,14 +46,14 @@
                 <div class="card1">
                     <h1>CASA DS</h1>
                     <h2>2024</h2>
-                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/casads.html"><img src="assets/projeto-ds.png" alt="link projeto CASA DS"></a>
+                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/casads"><img src="assets/projeto-ds.png" alt="link projeto CASA DS"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4 style="width: 187px;">INTERIORES + CONSULTORIA </h4>
                 </div>
                 <div class="card2" style="margin-top: -21px;">
                     <h1 style="text-transform: uppercase;">Slopes Ski & Snow Board Club</h1>
                     <h2>2025</h2>
-                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/slopeskisnowboardclub.html"><img src="assets/projeto-sssbc.png" alt="link projeto Slopes Ski & Snow Board Club"></a>
+                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/slopeskisnowboardclub"><img src="assets/projeto-sssbc.png" alt="link projeto Slopes Ski & Snow Board Club"></a>
                     <h3>FOTOS: PIPO GIALLUISI</h3>
                     <h4 style="width: 160px;">REFORMA + INTERIORES</h4>
                 </div>
@@ -62,14 +62,14 @@
                 <div class="card2" style="margin-top: -21px;">
                     <h1>POUSADA AQUALTUNE AMPLIAÇÃO</h1>
                     <h2>2024</h2>
-                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/pousadaaqualtuneampliacao.html"><img src="assets/projeto-170.webp" alt="link projeto POUSADA aqualtune AMPLIAÇÃO"></a>
+                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/pousadaaqualtuneampliacao"><img src="assets/projeto-170.webp" alt="link projeto POUSADA aqualtune AMPLIAÇÃO"></a>
                     <h3>FOTOS: MARIANA SENA</h3>
                     <h4 style="width: 190px;">ARQUITETURA + INTERIORES </h4>
                 </div>
                 <div class="card2">
                     <h1>POUSADA SABINA</h1>
                     <h2>2022</h2>
-                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/pousadasabina.html"><img src="assets/projeto-140.webp" alt="link projeto POUSADA SABINA"></a>
+                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/pousadasabina"><img src="assets/projeto-140.webp" alt="link projeto POUSADA SABINA"></a>
                     <h3>FOTOS:  @minafotovideo @camislemonde</h3>
                     <h4 style="width: 90px;">INTERIORES</h4>
                 </div>
@@ -78,7 +78,7 @@
                 <div class="card3">
                     <h1>POUSADA AQUALTUNE</h1>
                     <h2>2021</h2>
-                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/pousadaaqualtune.html"><img src="assets/projeto-150.webp" alt="link projeto POUSADA AQUALTUNE"></a>
+                    <a target="_blank" href="https://palomasiqueiraarquiteta.com/pousadaaqualtune"><img src="assets/projeto-150.webp" alt="link projeto POUSADA AQUALTUNE"></a>
                     <h3>FOTOS POR: @minafotovideo / @camislemonde / Mariana Sena</h3>
                     <h4 style="width: 90px;">INTERIORES</h4>
                 </div>
