div mudanca local

--- a/casads.html
+++ b/casads.html
@@ -88,7 +88,6 @@
         </div>
         <div class="frame1">
             <img src="./assets/casads/250904A-022.webp" alt="imagem Casa DS">
-            <img src="./assets/casads/250904A-025.webp" alt="imagem Casa DS">
         </div>
         <div class="container3-slider">
             <div class="slider3-wrapper">
@@ -99,6 +98,9 @@
                 </div>
             <a class="next3" id="arrowSlider3" onclick="next(this)">&#10095;</a> 
             </div>
+        </div>
+        <div class="frame1">
+            <img src="./assets/casads/250904A-025.webp" alt="imagem Casa DS">
         </div>
         <div class="outros">
             <p>OUTROS <br> PROJETOS</p>
