--- a/casads.html
+++ b/casads.html
@@ -65,14 +65,14 @@
             <div class="slider-wrapper">
                 <a class="prev" id="arrowSlider1" onclick="plusSlides(-1)">&#10094;</a>
                 <div class="slider">
-                    <div class="imgslide" id="imgslide1"><img src="./assets/casads/antes/Escritorio.webp" alt=""></div>
-                    <div class="imgslide" id="imgslide1"><img src="./assets/casads/antes/Sala Jantar.webp" alt=""></div>
                     <div class="imgslide" id="imgslide1"><img src="./assets/casads/antes/Estar Lareira.webp" alt=""></div>
+                    <div class="imgslide" id="imgslide1"><img src="./assets/casads/antes/Sala Jantar.webp" alt=""></div>
+                    <!-- <div class="imgslide" id="imgslide1"><img src="./assets/casads/antes/Escritorio.webp" alt=""></div> -->
                 </div>
                 <div class="slider1-nav">
                     <a class="dot2" onclick="currentSlide(1)" ></a>
                     <a class="dot2" onclick="currentSlide(2)" ></a>
-                    <a class="dot2" onclick="currentSlide(3)" ></a>
+                    <!-- <a class="dot2" onclick="currentSlide(3)" ></a> -->
                 </div>
             <a class="next" id="arrowSlider1" onclick="plusSlides(1)">&#10095;</a> 
             </div>
@@ -86,20 +86,18 @@
             <img src="./assets/casads/250904A-021.webp" alt="imagem Casa DS">
             <img src="./assets/casads/250904A-010.webp" alt="imagem Casa DS">
         </div>
-        <div class="frame1">
-            <img src="./assets/casads/250904A-022.webp" alt="imagem Casa DS">
-        </div>
         <div class="container3-slider">
             <div class="slider3-wrapper">
                 <a class="prev3" id="arrowSlider3" onclick="prev(this)">&#10094;</a>
                 <div class="slider3 slider">
-                    <div class="item iteml" id="imgslide1"><img src="./assets/casads/antes/Lavabo.webp" alt=""></div>
                     <div class="item" id="imgslide1"><img src="./assets/casads/antes/Gourmet.webp" alt=""></div>
+                    <div class="item iteml" id="imgslide1"><img src="./assets/casads/antes/Lavabo.webp" alt=""></div>
                 </div>
             <a class="next3" id="arrowSlider3" onclick="next(this)">&#10095;</a> 
             </div>
         </div>
         <div class="frame1">
+            <img src="./assets/casads/250904A-022.webp" alt="imagem Casa DS">
             <img src="./assets/casads/250904A-025.webp" alt="imagem Casa DS">
         </div>
         <div class="outros">
